rasn-compiler-tests/tests/snapshots/parameterization__parameterized_type.snap
---
source: rasn-compiler-tests/tests/parameterization.rs
description: "\n        ParamType { INTEGER: lower, BOOLEAN: flag } ::= SEQUENCE {\n            int-value INTEGER (lower..12),\n            bool-value BOOLEAN DEFAULT flag\n        }\n        ImplType ::= ParamType { 2, TRUE }\n    "
---
Generated:
# [allow (non_camel_case_types , non_snake_case , non_upper_case_globals , unused , clippy :: too_many_arguments ,)] pub mod test_module { extern crate alloc ; use core :: borrow :: Borrow ; use std :: sync :: LazyLock ; use rasn :: prelude :: * ; # [derive (AsnType , Debug , Clone , Decode , Encode , PartialEq , Eq , Hash)] # [rasn (automatic_tags)] pub struct ImplType { # [rasn (value ("2..=12") , identifier = "int-value")] pub int_value : u8 , # [rasn (default = "impl_type_bool_value_default" , identifier = "bool-value")] pub bool_value : bool , } impl ImplType { pub fn new (int_value : u8 , bool_value : bool) -> Self { Self { int_value , bool_value } } } fn impl_type_bool_value_default () -> bool { true } }
